--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "next": "^14.2.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "tesseract.js": "^6.0.1"
+    "tesseract.js": "^6.0.1",
+    "youtube-transcript": "^1.2.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
